[package]
name = "cloudmeta"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jimmyruann/cloudmeta"
authors = ["Jimmy Ruan <12026187+jimmyruann@users.noreply.github.com>"]
description = "Pull cloud metadata from Cloud Providers"
readme = "../README.md"
rust-version = "1.73"

[dependencies]

[lib]
name = "cloudmeta"
